# ai-agent-assignments

./: README.md  main.py  pyproject.toml  tavilySearch.py
Assignment_8/: guardrails.py
assignment_1/: faq_agent.py
assignment_2/: math_agent.py
assignment_3/: weather_agent.py
assignment_4/: multi_tool_agent.py
assignment_5/: support_bot.py
assignment_6/: advanced_agent.py
assignment_7/: webSearch.py
assignment_9/: agent.py  hotels.json
