[project]
name = "ok-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.102.0",
    "openai-agents>=0.2.9",
    "requests>=2.32.5",
]
[tool.poetry.dependencies]
python = "^3.10"
install = "*"
